# gate-data

./: .gitignore  Dockerfile  backfill_people_count.sh  day_stats.py  docker-compose.yml  load_metrics.sh  metrics.py  parse_data.py  people_count_openmetrics.py  people_counter_history.py  proxy.py  pyproject.toml  tests.py  unpack.py
.github/workflows/: publish.yml
feig/: __init__.py  gate_data.py  gate_socket.py  http_api.py  people_count.py  request.py  response.py  utils.py
gate/: gate_data.py  request.py  response.py  utils.py
test_data/: request_1765060339.txt  request_counter_data_isostart.txt  response_1765060339.txt  response_counter_data_isostart.txt  response_counter_data_rfid.txt
