[project]
name = "feig-py"
version = "0.1.0"
description = "Get data from FEIG RFID gates"
authors = [
    {name = "Anders Birkenes",email = "datagutten@datagutten.net"}
]
requires-python = ">=3.13"
# readme = "README.md"
[tool.poetry]
packages = [{ include = "feig" }]

[tool.poetry.dependencies]
prometheus-client = "^0.23.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
web = [
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
